force-app/main/default/objects/QA_Question__c/QA_Question__c.object-meta.xml
<CustomObject>
    <label>QA Question</label>
    <nameField>
        <label>QA Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>