force-app/main/default/objects/QA_Question__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <formula>QA_Question_Info__r.Help_Text__c</formula>
    <label>Help Text</label>
    <type>Text</type>
</CustomField>