force-app/main/default/objects/QA_Question__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <formula>QA_Question_Info__r.Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>