force-app/main/default/objects/QA_Question__c/fields/QA_Question_Info__c.field-meta.xml
<CustomField>
    <fullName>QA_Question_Info__c</fullName>
    <label>QA Question Info</label>
    <referenceTo>QA_Question_Info__c</referenceTo>
    <relationshipLabel>QA Questions</relationshipLabel>
    <relationshipName>QA_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>