force-app/main/default/objects/QA_Question__c/fields/Quality_Assurance_QA__c.field-meta.xml
<CustomField>
    <fullName>Quality_Assurance_QA__c</fullName>
    <label>Quality Assurance (QA)</label>
    <referenceTo>Quality_Assurance_QA__c</referenceTo>
    <relationshipLabel>QA Questions</relationshipLabel>
    <relationshipName>QA_Questions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>