force-app/main/default/objects/QA_Question__c/fields/Question_Score__c.field-meta.xml
<CustomField>
    <fullName>Question_Score__c</fullName>
    <description>The percentage of the question&apos;s &quot;value&quot; earned.  As in, if a question has the value of 20 and its scored at 20, this would be 100%</description>
    <formula>IF(ISBLANK(Score__c),null,(Score__c/100) / QA_Question_Info__r.Score_Value__c)</formula>
    <label>Question Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>