force-app/main/default/objects/QA_Question__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>Question answers are recorded here.  Used to score questions, and how they appear in UI.  Used for both Checkbox and Standard questions</description>
    <label>Result</label>
    <length>40</length>
    <type>Text</type>
</CustomField>