force-app/main/default/objects/QA_Question__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>The question&apos;s score as a raw number.  The maximum total score of all questions under a form is 100</description>
    <label>Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>